# GA

./: Changelog  GA.cabal  GA.hs  Makefile  README  example1.hs  example2.hs  example3.hs
examples/: Makefile  example1.hs  example2.hs  example3.hs  hello.hs  theNumber.hs
